--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ scJsHost+
 href="http://statcounter.com/" target="_blank"><img
 class="statcounter"
 src="http://c.statcounter.com/10617688/0/ca06d02c/0/"
-alt="free web stats"></a></div></noscript></p>
+alt="free web stats"></a></div></noscript> مشاهدة</p>
 			<!-- عداد الزوار -->
 			<a class="cd-btn" href="about.html" data-type="page-transition">Start animation</a></p>
 			<div align="center">
