--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <BR>وزنة عرشه
 <BR>ومداد كلماته</h1>
 			<!-- عداد الزوار -->
+مشاهدة
 <script type="text/javascript">
 var sc_project=10617688; 
 var sc_invisible=0; 
@@ -40,7 +41,7 @@ scJsHost+
 href="http://statcounter.com/" target="_blank"><img
 class="statcounter"
 src="http://c.statcounter.com/10617688/0/ca06d02c/0/"
-alt="free web stats"></a></div></noscript> مشاهدة</p>
+alt="free web stats"></a></div></noscript></p>
 			<!-- عداد الزوار -->
 			<a class="cd-btn" href="about.html" data-type="page-transition">Start animation</a></p>
 			<div align="center">
