--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <BR>وزنة عرشه
 <BR>ومداد كلماته</h1>
 			<!-- عداد الزوار -->
-مشاهدة
+<font color="red" >مشاهدة</font>
 <script type="text/javascript">
 var sc_project=10617688; 
 var sc_invisible=0; 
