--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@ src="http://c.statcounter.com/10617688/0/ca06d02c/0/"
 alt="free web stats"></a></div></noscript>
 <h3><font color="red" >مشاهدة</font></h3></p>
 			<!-- عداد الزوار -->
-			<a class="cd-btn" href="about.html" data-type="page-transition">Start animation</a></p>
+			<h3><font color="red" >شارك الرابط مع أصدقائك </font></h3>
+			<!-- زر الصفحة الثاني 
+			<a class="cd-btn" href="about.html" data-type="page-transition">Start animation</a></p> -->
 			<div align="center">
 				<a class="icons"><a href="mailto:o@outlook.kr" title="o@outlook.kr"><i class="fa fa-paper-plane fa-3x"></i></a> <a href="https://twitter.com/iD70my" title="@iD70my" target="_blank"><i class="fa fa-twitter fa-3x"></i></a> <a href="instagram://send?to= شاهد سورس وتمتع بأفضل أدوات السديا" title="مشاركة عبر الإنستقرام"><i class="fa fa-instagram fa-3x"></i></a> <a href="whatsapp://send?text= شاهد سورس iD70my وتمتع بأفضل أدوات السديا - http://id70my.github.io" title="مشاركة عبر الواتس آب" target="_blank"><i class="i fa fa-whatsapp fa-3x"></i>
 			</div>
