--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ href="http://statcounter.com/" target="_blank"><img
 class="statcounter"
 src="http://c.statcounter.com/10617688/0/ca06d02c/0/"
 alt="free web stats"></a></div></noscript>
-<h3><font color="red" >مشاهدة</font></h3></p>
+<h3><font color="#283040" >مشاهدة</font></h3></p>
 			<!-- عداد الزوار -->
 			<h2><font color="#FFFFFF" >شارك الرابط مع أصدقائك عبر </font></h2>
 			<!-- زر الصفحة الثاني 
