--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ src="http://c.statcounter.com/10617688/0/ca06d02c/0/"
 alt="free web stats"></a></div></noscript>
 <h3><font color="#283040" >مشاهدة</font></h3></p>
 			<!-- عداد الزوار -->
-			<h2><font color="#FFFFFF" >شارك الرابط مع أصدقائك عبر </font></h2>
+			<font color="#FFFFFF" ><h2>شارك الرابط مع أصدقائك عبر </h2></font>
 			<!-- زر الصفحة الثاني 
 			<a class="cd-btn" href="about.html" data-type="page-transition">Start animation</a></p> -->
 			<div align="center">
