--- a/index.html
+++ b/index.html
@@ -44,20 +44,13 @@ src="http://c.statcounter.com/10617688/0/ca06d02c/0/"
 alt="free web stats"></a></div></noscript>
 <h3><font color="#283040" >مشاهدة</font></h3></p>
 			<!-- عداد الزوار -->
+			<font face="tahoma" color="#ffffff"> روى الإمام مسلم وغيره من حديث جويرية رضي الله عنها أن النبي صلى الله عليه وسلم خرج من عندها بكرة حين صلى الصبح وهي في مسجدها، ثم رجع بعد أن أضحى وهي جالسة، فقال: ما زلت على الحال التي فارقتك عليها! قالت: نعم، قال النبي صلى الله عليه وسلم: لقد قلت بعدك أربع كلمات ثلاث مرات لو وزنت بما قلت منذ اليوم لوزنتهن، سبحان الله وبحمده عدد خلقه ورضا نفسه وزنة عرشه ومداد كلماته. </font> 
 			<font color="#FFFFFF" ><h2>شارك الرابط مع أصدقائك عبر </h2></font>
 			<!-- زر الصفحة الثاني 
 			<a class="cd-btn" href="about.html" data-type="page-transition">Start animation</a></p> -->
 			<div align="center">
 				<a class="icons"><a href="mailto:o@outlook.kr" title="o@outlook.kr"><i class="fa fa-paper-plane fa-3x"></i></a> <a href="https://twitter.com/iD70my" title="@iD70my" target="_blank"><i class="fa fa-twitter fa-3x"></i></a> <a href="instagram://send?to= شاهد سورس وتمتع بأفضل أدوات السديا" title="مشاركة عبر الإنستقرام"><i class="fa fa-instagram fa-3x"></i></a> <a href="whatsapp://send?text= شاهد سورس iD70my وتمتع بأفضل أدوات السديا - http://id70my.github.io" title="مشاركة عبر الواتس آب" target="_blank"><i class="i fa fa-whatsapp fa-3x"></i>
 			</div>
-			<!-- زر المتابعة -->
-			<a href="https://twitter.com/iD70my" class="twitter-follow-button" data-show-count="true" data-dnt="true"></a>       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>			<!-- زر المتابعة -->
-			<!-- زر التغريد -->
-			<div align="center">
-			<a class="twitter-share-button"><a 
-  href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fdev.twitter.com%2Fweb%2Ftweet-button%3Fsrc%3Dtwitter"
-  data-counturl="http://id70my.github.io/t.html"</a></div>
-			<!-- زر التغريد -->
 		</div>
 	</div>
 </main>
