--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <main>
 	<div class="cd-index cd-main-content">
 		<div>
-			<h1>أَشْهَدُ أَنّ لَّا إِلَٰهَ إِلَّإ الله و أَشْهَدُ ان محمد رسول الله
-<BR>سبحان الله وبحمده
+
+			<h1>سبحان الله وبحمده
 <BR>عدد خلقه
 <BR>ورضى نفسه
 <BR>وزنة عرشه
@@ -44,7 +44,11 @@ src="http://c.statcounter.com/10617688/0/ca06d02c/0/"
 alt="free web stats"></a></div></noscript>
 <h3><font color="#283040" >مشاهدة</font></h3></p>
 			<!-- عداد الزوار -->
-			<font face="tahoma" size="-1" color="#ffffff"> روى الإمام مسلم وغيره من حديث جويرية رضي الله عنها أن النبي صلى الله عليه وسلم خرج من عندها بكرة حين صلى الصبح وهي في مسجدها، ثم رجع بعد أن أضحى وهي جالسة، فقال: ما زلت على الحال التي فارقتك عليها! قالت: نعم، قال النبي صلى الله عليه وسلم: لقد قلت بعدك أربع كلمات ثلاث مرات لو وزنت بما قلت منذ اليوم لوزنتهن، سبحان الله وبحمده عدد خلقه ورضا نفسه وزنة عرشه ومداد كلماته. </font> 
+<font face="tahoma" size="-1" color="#ffffff"> روى الإمام مسلم وغيره من حديث جويرية رضي الله عنها أن النبي صلى الله عليه وسلم 
+<BR>خرج من عندها بكرة حين صلى الصبح وهي في مسجدها، ثم رجع بعد أن أضحى وهي
+<BR> جالسة، فقال: ما زلت على الحال التي فارقتك عليها! قالت: نعم، قال النبي صلى الله عليه 
+<BR>وسلم: لقد قلت بعدك أربع كلمات ثلاث مرات لو وزنت بما قلت منذ اليوم لوزنتهن، سبحان الله 
+<BR>وبحمده عدد خلقه ورضا نفسه وزنة عرشه ومداد كلماته. </font> 
 			<font color="#FFFFFF" ><h2>شارك الرابط مع أصدقائك عبر </h2></font>
 			<!-- زر الصفحة الثاني 
 			<a class="cd-btn" href="about.html" data-type="page-transition">Start animation</a></p> -->
