--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ src="http://c.statcounter.com/10617688/0/ca06d02c/0/"
 alt="free web stats"></a></div></noscript>
 <h3><font color="#283040" >مشاهدة</font></h3></p>
 			<!-- عداد الزوار -->
+<h3><font color="#ffffff" >فضلها</font></h3>
 <font face="tahoma" size="-1" color="#ffffff"> روى الإمام مسلم وغيره من حديث جويرية رضي الله عنها أن النبي صلى الله عليه وسلم 
 <BR>خرج من عندها بكرة حين صلى الصبح وهي في مسجدها، ثم رجع بعد أن أضحى وهي
 <BR> جالسة، فقال: ما زلت على الحال التي فارقتك عليها! قالت: نعم، قال النبي صلى الله عليه 
