--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 	<div class="cd-index cd-main-content">
 		<div>
 
-			<h1>سبحان الله وبحمده
+<font face="tahoma" size="+5" color="#ffffff">سبحان الله وبحمده
 <BR>عدد خلقه
 <BR>ورضى نفسه
 <BR>وزنة عرشه
-<BR>ومداد كلماته</h1>
+<BR>ومداد كلماته</font>
 			<!-- عداد الزوار -->
 
 <script type="text/javascript">
@@ -49,7 +49,7 @@ alt="free web stats"></a></div></noscript>
 <BR>خرج من عندها بكرة حين صلى الصبح وهي في مسجدها، ثم رجع بعد أن أضحى وهي
 <BR> جالسة، فقال: ما زلت على الحال التي فارقتك عليها! قالت: نعم، قال النبي صلى الله عليه 
 <BR>وسلم: لقد قلت بعدك أربع كلمات ثلاث مرات لو وزنت بما قلت منذ اليوم لوزنتهن، سبحان الله 
-<BR>وبحمده عدد خلقه ورضا نفسه وزنة عرشه ومداد كلماته. </font> 
+<BR>وبحمده عدد خلقه ورضا نفسه وزنة عرشه ومداد كلماته. </font></p>
 			<font color="#FFFFFF" ><h2>شارك الرابط مع أصدقائك عبر </h2></font>
 			<!-- زر الصفحة الثاني 
 			<a class="cd-btn" href="about.html" data-type="page-transition">Start animation</a></p> -->
