--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<div class="cd-index cd-main-content">
 		<div>
 
-<font face="tahoma" size="+5" color="#ffffff">سبحان الله وبحمده
+<font face="Amiri" size="+5" color="#ffffff">سبحان الله وبحمده
 <BR>عدد خلقه
 <BR>ورضى نفسه
 <BR>وزنة عرشه
