--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <BR>عدد خلقه
 <BR>ورضى نفسه
 <BR>وزنة عرشه
-<BR>ومداد كلماته</font>
+<BR>ومداد كلماته</font></p>
 			<!-- عداد الزوار -->
 
 <script type="text/javascript">
