--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 	<div class="cd-index cd-main-content">
 		<div>
 
-<font face="Amiri" size="+3" color="#ffffff">سبحان الله وبحمده
+<h1>سبحان الله وبحمده
 <BR>عدد خلقه
 <BR>ورضى نفسه
 <BR>وزنة عرشه
-<BR>ومداد كلماته</font></p>
+<BR>ومداد كلماته</h1>
 			<!-- عداد الزوار -->
 
 <script type="text/javascript">
@@ -42,7 +42,7 @@ href="http://statcounter.com/" target="_blank"><img
 class="statcounter"
 src="http://c.statcounter.com/10617688/0/ca06d02c/0/"
 alt="free web stats"></a></div></noscript>
-<h3><font color="#283040" >مشاهدة</font></h3></p>
+<font color="#283040" >مشاهدة</font></p>
 			<!-- عداد الزوار -->
 <h3><font color="#ffffff" >فضلها</font></h3>
 <font face="tahoma" size="-1" color="#ffffff"> روى الإمام مسلم وغيره من حديث جويرية رضي الله عنها أن النبي صلى الله عليه وسلم 
