--- a/index.html
+++ b/index.html
@@ -55,6 +55,17 @@ alt="free web stats"></a></div></noscript>
 			<a class="cd-btn" href="about.html" data-type="page-transition">Start animation</a></p> -->
 			<div align="center">
 				<a class="icons"><a href="mailto:o@outlook.kr" title="o@outlook.kr"><i class="fa fa-paper-plane fa-3x"></i></a> <a href="https://twitter.com/iD70my" title="@iD70my" target="_blank"><i class="fa fa-twitter fa-3x"></i></a> <a href="instagram://send?to= شاهد سورس وتمتع بأفضل أدوات السديا" title="مشاركة عبر الإنستقرام"><i class="fa fa-instagram fa-3x"></i></a> <a href="whatsapp://send?text= شاهد سورس iD70my وتمتع بأفضل أدوات السديا - http://id70my.github.io" title="مشاركة عبر الواتس آب" target="_blank"><i class="i fa fa-whatsapp fa-3x"></i>
+<!-- إعلان -->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- tasbeeh6.github.io -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:320px;height:100px"
+     data-ad-client="ca-pub-6881705552872258"
+     data-ad-slot="5662391125"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+<!-- إعلان -->
 			</div>
 		</div>
 	</div>
