--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ alt="free web stats"></a></div></noscript>
 			<!-- زر الصفحة الثاني 
 			<a class="cd-btn" href="about.html" data-type="page-transition">Start animation</a></p> -->
 			<div align="center">
-				<a class="icons"><a href="mailto:o@outlook.kr" title="o@outlook.kr"><i class="fa fa-paper-plane fa-3x"></i></a> <a href="https://twitter.com/iD70my" title="@iD70my" target="_blank"><i class="fa fa-twitter fa-3x"></i></a> <a href="instagram://send?to= شاهد سورس وتمتع بأفضل أدوات السديا" title="مشاركة عبر الإنستقرام"><i class="fa fa-instagram fa-3x"></i></a> <a href="whatsapp://send?text= شاهد سورس iD70my وتمتع بأفضل أدوات السديا - http://id70my.github.io" title="مشاركة عبر الواتس آب" target="_blank"><i class="i fa fa-whatsapp fa-3x"></i>
+				<a class="icons"><a href="mailto:o@outlook.kr" title="o@outlook.kr"><i class="fa fa-paper-plane fa-3x"></i></a> <a href="https://twitter.com/iD70my" title="@iD70my" target="_blank"><i class="fa fa-twitter fa-3x"></i></a> <a href="instagram://send?to= شاهد سورس وتمتع بأفضل أدوات السديا" title="مشاركة عبر الإنستقرام"><i class="fa fa-instagram fa-3x"></i></a> <a href="whatsapp://send?text= أربع كلمات فقط فضلها كفضل ساعات من الذكر - http://tasbeeh6.github.io" title="مشاركة عبر الواتس آب" target="_blank"><i class="i fa fa-whatsapp fa-3x"></i>
 <BR>
 <BR>
 <!-- إعلان -->
