--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
   	
-	<title>وقف لله</title>
+	<title>أربع كلمات فقط فضلها كفضل ساعات من الذكر</title>
 	<link rel="shortcut icon" href="ico/favicon.ico">
         <link rel="icon" type="image/ico" href="ico/favicon.ico"
 </head>
