--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ href="http://statcounter.com/" target="_blank"><img
 class="statcounter"
 src="http://c.statcounter.com/10617688/0/ca06d02c/0/"
 alt="free web stats"></a></div></noscript>
-<font color="#283040" >مشاهدة</font></p>
+<BR><font color="#283040" >مشاهدة</font></p>
 			<!-- عداد الزوار -->
 <h3><font color="#ffffff" >فضلها</font></h3>
 <font face="tahoma" size="-1" color="#ffffff"> روى الإمام مسلم وغيره من حديث جويرية رضي الله عنها أن النبي صلى الله عليه وسلم 
