--- a/index.html
+++ b/index.html
@@ -78,5 +78,11 @@ alt="free web stats"></a></div></noscript>
 <div class="cd-loading-bar"></div>
 <script src="js/jquery-2.1.1.js"></script>
 <script src="js/main.js"></script> <!-- Resource jQuery -->
+<!-- ملف الصوت -->
+<div align="center">
+<embed src="http://audio3.islamweb.net/Anasheed/215151/21515103.mp3" width="198" height="32" align="bottom" border="1" autostar="flase"></embed>
+</div>
+</body>
+<!-- ملف الصوت -->
 </body>
 </html>
