--- a/1.html
+++ b/1.html
@@ -1,4 +1,5 @@
 <title> </title>
-<link rel="apple-touch-icon" href="1.png" />
-<link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-ipad.png" />
-<link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-iphone-retina-display.png" />
+<link rel="apple-touch-icon" href="touch-icon-iphone.png">
+<link rel="apple-touch-icon" sizes="76x76" href="touch-icon-ipad.png">
+<link rel="apple-touch-icon" sizes="120x120" href="touch-icon-iphone-retina.png">
+<link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad-retina.png">
