--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
   	
-	<title>أربع كلمات فقط فضلها كفضل ساعات من الذكر</title>
+	<title>ٰ</title>
+<link rel="apple-touch-icon" href="touch-icon-iphone.png">
+<link rel="apple-touch-icon" sizes="76x76" href="touch-icon-ipad.png">
+<link rel="apple-touch-icon" sizes="120x120" href="touch-icon-iphone-retina.png">
+<link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad-retina.png">
 	<link rel="shortcut icon" href="ico/favicon.ico">
         <link rel="icon" type="image/ico" href="ico/favicon.ico"
 </head>
