--- a/test.html
+++ b/test.html
@@ -2,3 +2,7 @@ tshirt {
   border: 100px solid #2f304f;
   background-color: #fff;
 }
+.tshirt {
+  border: 100px solid #2f304f;
+  background-color: #fff;
+}
