--- a/test.html
+++ b/test.html
@@ -3,6 +3,6 @@ tshirt {
   background-color: #fff;
 }
 .tshirt {
-  border: 100px solid #2f304f;
+  border:100px solid #4682b4;
   background-color: #fff;
 }
