--- a/test.html
+++ b/test.html
@@ -1,8 +1,6 @@
-tshirt {
-  border: 100px solid #2f304f;
+html {
+.tshirt {
+  border:100px solid #2f304f;
   background-color: #fff;
 }
-.tshirt {
-  border:100px solid #4682b4;
-  background-color: #fff;
 }
