--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ alt="free web stats"></a></div></noscript>
 				<a href="https://www.facebook.com/sharer/sharer.php?sdk=joey&u=http%3A%2F%2Ftasbeeh6.github.io%2Findex.html&display=popup&ref=plugin&src=share_button" title="مشاركة عبر الفيس بوك"><i class="fa fa-facebook-square fa-3x"></i></a> 
 				<a href="https://twitter.com/intent/tweet?text=%D8%A3%D8%B1%D8%A8%D8%B9+%D9%83%D9%84%D9%85%D8%A7%D8%AA+%D9%81%D9%82%D8%B7+%D9%81%D8%B6%D9%84%D9%87%D8%A7+%D9%83%D9%81%D8%B6%D9%84+%D8%B3%D8%A7%D8%B9%D8%A7%D8%AA+%D9%85%D9%86+%D8%A7%D9%84%D8%B0%D9%83%D8%B1+%0D%0A%0D%0Ahttp%3A%2F%2Ftasbeeh6.github.io%0D%0A%0D%0A%23%D8%AA%D8%B3%D8%A8%D9%8A%D8%AD+%23%D8%A7%D8%B0%D9%83%D8%A7%D8%B1+%23%D8%B1%D8%AA%D9%88%D9%8A%D8%AA&source=clicktotweet&related=clicktotweet" title="مشاركة عبر تويتر" target="_blank"><i class="fa fa-twitter fa-3x"></i></a> 
 				<a href="whatsapp://send?text= أربع كلمات فقط فضلها كفضل ساعات من الذكر - http://tasbeeh6.github.io" title="مشاركة عبر الواتس آب" target="_blank"><i class="i fa fa-whatsapp fa-3x"></i></a>
-				<a href="telegram://text= أربع كلمات فقط فضلها كفضل ساعات من الذكر - http://tasbeeh6.github.io" title="مشاركة عبر التيليجرام" target="_blank"><i class="i fa fa-paper-plane fa-3x"></i>
+				<a href="telegram://new_chat_participant= أربع كلمات فقط فضلها كفضل ساعات من الذكر - http://tasbeeh6.github.io" title="مشاركة عبر التيليجرام" target="_blank"><i class="i fa fa-paper-plane fa-3x"></i>
 <BR>
 <BR>
 <!-- إعلان -->
