--- a/index.html
+++ b/index.html
@@ -69,6 +69,17 @@ alt="free web stats"></a></div></noscript>
                 <div class="social-share-overlay "></div>
             </a>
             <!--/END INSTAGRAM SHARE -->
+              <!-- INSTAGRAM MODAL -->
+        <div id="instashare-modal" class="instashare-modal dialog">
+            <div id="instashare-share">
+                <span id="instashare-title">SHARE ON INSTAGRAM</span>
+                <span id="instashare-body">Weâ€™re going to create a GIF that you can post to Instagram. Where should we send it?</span>
+                <input id="instashare-email-input" placeholder="enter your email">
+                <span id="instashare-send-button" >SEND</span>
+                <img id="instashare-loader" src="/static//img/loader_purple.gif" />
+            </div>
+        </div>
+        <!-- /INSTAGRAM MODAL -->
 <BR>
 <BR>
 <!-- إعلان -->
